--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@truffle/hdwallet-provider": "^1.4.1",
     "solc": "^0.7.1",
     "web3": "^1.4.0"
   }
